# nativescript

./: CMakeLists.txt  README.md
nsg/: CMakeLists.txt
nsg/src/: main.cpp
nslib/: CMakeLists.txt
nslib/src/: ns.h
nslib/src/ns/: generator.cpp  generator.h  lexer.cpp  lexer.h  loader.cpp  loader.h
template/: CMakeLists.txt
test/: CMakeLists.txt
test/src/: main.cpp
